test/data/semantic-errors/function-with-multiple-return-types-in-binary-expression.jen
onlyGreaterThan3Allowed: number -> number, error
onlyGreaterThan3Allowed(num):
  if num <= 3:
    return 'Greater than 3 not allowed', err
  else:
    return 4, ok


result := onlyGreaterThan3Allowed(3) + 3
